--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,5 @@
-html, body {
+html,
+body {
     width: 100%;
     overflow-x: hidden;
 }
@@ -42,7 +43,7 @@ p {
 }
 
 .bg-5 {
-    background-color: #e2e2e2;
+    background-color: #E8E8E8;
     color: #474e5d;
 }
 
@@ -61,7 +62,8 @@ p {
     letter-spacing: 5px;
 }
 
-.fa, .fab {
+.fa,
+.fab {
     padding: 20px;
     font-size: 30px;
     text-align: center;
@@ -133,7 +135,8 @@ p {
     font-size: 50px !important;
 }
 
-.fa:hover, .fab:hover {
+.fa:hover,
+.fab:hover {
     color: white;
     opacity: 1;
 }
@@ -191,4 +194,45 @@ p {
 
 .navbar-nav li a {
     padding: 10px !important;
+}
+
+.card {
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
+    max-width: 300px;
+    margin: auto;
+    text-align: center;
+    background-color: white;
+    margin-top: 20px;
+}
+
+.card img {
+    padding: 8px;
+    width: 100%;
+    height: 200px;
+}
+
+.button {
+    border: none;
+    outline: 0;
+    display: inline-block;
+    padding: 8px;
+    color: white;
+    background-color: #1abc9c;
+    text-align: center;
+    cursor: pointer;
+    width: 100%;
+    font-size: 18px;
+}
+
+.button:hover {
+    color: white;
+}
+
+.title {
+    height: 40px;
+}
+
+.link-primary,
+.link-primary:hover {
+    color: #1abc9c !important;
 }
