--- a/css/style.css
+++ b/css/style.css
@@ -123,8 +123,12 @@ p {
 }
 
 #TOOLS .large-img {
-    width: 400px;
-    height: 250px;
+    width: 100%;
+    height: 100%;
+    max-width: 400px;
+    max-height: 250px;
+    min-width: 200px;
+    min-height: 125px;
 }
 
 .SKILLS {
