--- a/css/style.css
+++ b/css/style.css
@@ -19,13 +19,13 @@ p {
 }
 
 .bg-1 {
-    background-color: #1abc9c;
+    background-image: linear-gradient(140deg, #39e2c9 0%, #2d97cb 100%);
     /* Green */
     color: #ffffff;
 }
 
 .bg-2 {
-    background-color: #474e5d;
+    background-color: #1d273f;
     /* Dark Blue */
     color: #ffffff;
 }
@@ -37,13 +37,13 @@ p {
 }
 
 .bg-4 {
-    background-color: #2f2f2f;
+    background-color: #1d273f;
     /* Black Gray */
     color: #fff;
 }
 
 .bg-5 {
-    background-color: #E8E8E8;
+    background-color: #eef3f7;
     color: #474e5d;
 }
 
@@ -154,12 +154,7 @@ p {
     bottom: 0px;
 }
 
-.top-anchore a {
-    color: #117964;
-}
-
 .top-anchore a:hover i {
-    color: #117964;
     text-decoration: none;
 }
 
@@ -196,6 +191,10 @@ p {
     padding: 10px !important;
 }
 
+.navbar-nav li a:hover {
+    color: #39e2c9 !important;
+}
+
 .card {
     box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
     max-width: 300px;
@@ -217,7 +216,7 @@ p {
     display: inline-block;
     padding: 8px;
     color: white;
-    background-color: #1abc9c;
+    background-image: linear-gradient(140deg, #39e2c9 0%, #2d97cb 100%);
     text-align: center;
     cursor: pointer;
     width: 100%;
@@ -232,9 +231,12 @@ p {
     height: 40px;
 }
 
-.link-primary,
+.link-primary {
+    color: #2d97cb !important;
+}
+
 .link-primary:hover {
-    color: #1abc9c !important;
+    color: #39e2c9 !important;
 }
 
 .navbar-brand {
@@ -244,4 +246,16 @@ p {
 .navbar-brand img {
     height: 50px;
     width: 200px;
+}
+
+.navbar-nav li a:hover {
+    padding-bottom: 10px;
+    border-bottom: 2px solid #39e2c9;
+}
+
+.fa-chevron-up {
+    background-image: linear-gradient(140deg, #2d97cb 0%, #39e2c9 100%);
+    color: white;
+    border-radius: 10px;
+    padding: 10px;
 }
