--- a/css/style.css
+++ b/css/style.css
@@ -53,14 +53,17 @@ p {
 }
 
 .navbar {
-  padding-top: 15px;
-  padding-bottom: 15px;
-  border: 0;
-  border-radius: 0;
-  margin-bottom: 0;
-  font-size: 12px;
-  letter-spacing: 5px;
+  font-size: 16px;
   background: transparent;
+  margin-bottom: 0px;
+}
+
+.navbar-collapse {
+  padding-top: 6px;
+}
+
+.landing-page .container-fluid {
+  min-height: calc(100vh - 50px);
 }
 
 .fa,
@@ -194,6 +197,7 @@ p {
 
 .navbar-nav li a:hover {
   color: #3f51b5 !important;
+  border-bottom: 2px solid #3f51b5;
 }
 
 .card {
@@ -253,10 +257,6 @@ p {
   border-bottom: 2px solid #ffffff;
 }
 
-.navbar-nav li a:hover {
-  border-bottom: 2px solid #3f51b5;
-}
-
 .fa-chevron-up {
   background-color: #1a237e;
   color: white;
@@ -276,4 +276,8 @@ h1 strong {
     0 0 5px rgba(0, 0, 0, 0.05), 0 1px 3px rgba(0, 0, 0, 0.2),
     0 3px 5px rgba(0, 0, 0, 0.2), 0 5px 10px rgba(0, 0, 0, 0.2),
     0 10px 10px rgba(0, 0, 0, 0.2), 0 20px 20px rgba(0, 0, 0, 0.3);
+}
+
+.landing-page {
+  min-height: 100vh;
 }
